[gd_scene load_steps=10 format=3 uid="uid://cpnacakddc55a"]

[ext_resource type="Shader" path="res://Assets/Shaders/blur_shaders.gdshader" id="1_0nggq"]
[ext_resource type="Script" path="res://Scripts/UI/PauseMenu.gd" id="1_fhw4n"]
[ext_resource type="FontFile" uid="uid://b473e647e0sd3" path="res://Assets/Fonts/Pixeled.ttf" id="2_qapfa"]
[ext_resource type="Theme" uid="uid://bxgvpr8vq35ud" path="res://Themes/PauseMenu.tres" id="3_krhsp"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2yhd4"]
shader = ExtResource("1_0nggq")
shader_parameter/strength = 0.0
shader_parameter/sample_power = 4
shader_parameter/is_canvas_group = true

[sub_resource type="Animation" id="Animation_y08im"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("br_overlay:material:shader_parameter/strength")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_qpgi7"]
resource_name = "pause_game"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("br_overlay:material:shader_parameter/strength")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 10.0]
}

[sub_resource type="Animation" id="Animation_oeg3a"]
resource_name = "resume_game"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("br_overlay:material:shader_parameter/strength")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [10.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w8mn2"]
_data = {
"RESET": SubResource("Animation_y08im"),
"pause_game": SubResource("Animation_qpgi7"),
"resume_game": SubResource("Animation_oeg3a")
}

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_fhw4n")

[node name="br_overlay" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_2yhd4")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="br_overlay"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -185.0
offset_top = 150.0
offset_right = 195.0
offset_bottom = 353.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="br_overlay/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 6

[node name="Label" type="Label" parent="br_overlay/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_outline_color = Color(0, 0.458824, 0.47451, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("2_qapfa")
theme_override_font_sizes/font_size = 72
text = "PAUSE"

[node name="HBoxContainer" type="HBoxContainer" parent="br_overlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -185.0
offset_top = -140.0
offset_right = 195.0
offset_bottom = 243.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="br_overlay/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="resume_btn" type="Button" parent="br_overlay/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_krhsp")
text = "RESUME 
"

[node name="options_btn" type="Button" parent="br_overlay/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("3_krhsp")
text = "OPTIONS"

[node name="gamemenu_btn" type="Button" parent="br_overlay/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("3_krhsp")
text = "GAME MENU"

[node name="quit_btn" type="Button" parent="br_overlay/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_krhsp")
text = "QUIT GAME
"

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_w8mn2")
}
autoplay = "pause_game"

[connection signal="pressed" from="br_overlay/HBoxContainer/VBoxContainer/resume_btn" to="." method="_on_resume_btn_pressed"]
[connection signal="pressed" from="br_overlay/HBoxContainer/VBoxContainer/gamemenu_btn" to="." method="_on_gamemenu_btn_pressed"]
[connection signal="pressed" from="br_overlay/HBoxContainer/VBoxContainer/quit_btn" to="." method="_on_quit_btn_pressed"]
